--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,11 +63,11 @@
     <Compile Include="Assets\Scripts\MovementInput1.cs" />
     <Compile Include="Assets\Jammo-Character\Scripts\MovementInput.cs" />
     <Compile Include="Assets\Scripts\PlayerInteraction.cs" />
-    <Compile Include="Assets\Scripts\InteractableObject.cs" />
     <Compile Include="Assets\Scripts\CameraMove.cs" />
     <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Jammo-Character\Scripts\CharacterSkinController.cs" />
     <Compile Include="Assets\Scripts\Dragging.cs" />
+    <Compile Include="Assets\Scripts\Lifting.cs" />
     <Compile Include="Assets\Scripts\PlayerMovement.cs" />
     <Compile Include="Assets\Scripts\Grabbing.cs" />
   </ItemGroup>
